Test on test.opencitations.net

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -18,9 +18,9 @@
 name: Run tests
 on:
   push:
-    branches: [ master ]
+    branches: [ test.opencitations.net ]
   pull_request:
-    branches: [ master ]
+    branches: [ test.opencitations.net ]
 jobs:
   CheckCoverage:
     runs-on: ubuntu-latest
