pip3 install psutil

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip3 install ramose
+        pip3 install psutil
         pip3 install coverage
         pip3 install coverage-badge
     - name: Check the coverage
