ci(deps): migrate to uv for dependency management and enhance CI
This commit migrates the project's dependency management from Poetry to uv. The switch to uv allows for better management of multiple Python versions.

A new GitHub Actions workflow has been added to automate testing on Python versions 3.9, 3.10, 3.11, and 3.12. The CI pipeline now automatically starts a Virtuoso test database, loads the necessary data, and runs the entire test suite.

The README.md file has been updated to reflect these changes and provide instructions for the new setup.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,25 @@
-[tool.poetry]
+[project]
 name = "api"
 version = "0.1.0"
-description = ""
-authors = ["arcangelo7 <arcangelomas@gmail.com>"]
-license = "ISC"
+description = "Add your description here"
+authors = [
+    {name = "arcangelo7", email = "arcangelo.massari@unibo.it"}
+]
+license = {text = "ISC"}
 readme = "README.md"
+requires-python = ">=3.9,<3.13"
+dependencies = [
+    "ramose>=1.0.8",
+    "sparqlwrapper>=2.0.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-ramose = "^1.0.8"
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "virtuoso-utilities>=1.0.0",
+]
 
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[tool.pytest.ini_options]
+pythonpath = [
+    "."
+]
