ci(tests): enhance CI workflow with test database management
This commit updates the GitHub Actions workflow to include steps for starting and stopping a test database during the CI process. The new steps ensure that the test environment is properly set up before running tests, improving the reliability of the test suite.

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -27,5 +27,12 @@ jobs:
     - name: Install dependencies
       run: uv sync --dev
 
+    - name: Start test database
+      run: ./test/start_test_db.sh
+
     - name: Run tests
-      run: uv run pytest 
+      run: uv run pytest
+
+    - name: Stop test database
+      if: always()
+      run: ./test/stop_test_db.sh 
