ci(tests): update coverage configuration and CI workflow
This commit enhances the test coverage configuration in the pyproject.toml file by adding coverage source directories and updating pytest options for better reporting. Additionally, the GitHub Actions workflow is modified to streamline coverage reporting, removing the generation of HTML reports in favor of a more concise output.

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -44,17 +44,12 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        uv run pytest --cov-report=xml --cov-report=term --cov=ccc_addon.py --cov=indexapi_v1.py --cov=indexapi_v2.py --cov=metaapi.py --cov=occapi.py --cov=publishers.py --cov=wikidataapi.py
-        echo "COVERAGE=$(uv run coverage report | grep TOTAL | awk '{print $4}')" >> $GITHUB_ENV
+        echo "COVERAGE=$(uv run pytest | tee /dev/stderr | grep TOTAL | awk '{print $4}')" >> $GITHUB_ENV
 
     - name: Stop test database
       if: always()
       run: ./test/stop_test_db.sh
       
-    - name: Generate HTML coverage report
-      run: |
-        uv run coverage html -d htmlcov
-        
     - name: Upload coverage artifact
       if: matrix.python-version == '3.10' && github.ref == 'refs/heads/master'
       uses: actions/upload-artifact@v4
